--- a/styles/Dashboard.module.css
+++ b/styles/Dashboard.module.css
@@ -18,47 +18,7 @@
         margin-bottom: 5px;
     }
 }
-/* @media screen and (max-width: 560px) {
 
-    .user_content div{
-        font-size: 70%;
-        margin-right: -0.5px;
-    }
-    .down{
-        display:none;
-    }
-    .nav_content div{
-        font-size: 60%;
-        margin: 20px 0;
-        cursor: pointer;
-    }
-    .challenge_box1{
-        padding:5%;
-        font-size:30%;
-    }
-    .left_content{
-        position: fixed;
-        width: 85%;
-        height: 100%;
-        right: 0;
-        top: 0;
-        background-color: white;
-        font-size: 60%;
-        font-weight: bold;
-        /* display: flex;
-        justify-content: center;
-        align-items: center;
-         */
-    /* } 
-    .left_content button{
-        position: absolute;
-        bottom: 20px;
-        padding: 10% 10%;
-        max-width: 100%;
-        background-color: black;
-        border-radius: 5px;
-    }
-} */
 @media screen and (max-width: 1100px) {
     .left_content button{
         padding: 10px 5px ;
@@ -102,13 +62,14 @@
         background-color: white;
         width: 100%;
         border-bottom: 2px solid #ccc;
+        font-weight:600;
        
     }
     .written_content{
         padding: 15px 10px;
         position: relative;
         top: 0;
-        background-color: palevioletred;
+        background-color: rgb(240, 182, 201);
         font-weight:600;
     }
     .written_box_1{
@@ -212,15 +173,7 @@
     margin: 20px 0;
     cursor: pointer;
 }
-/* .box{
 
-    position:fixed;
-    z-index: 5;
-    left: 0;
-    background-color: #3A3B3C;
-    min-height: 100vh;
-    width: 70%;
-} */
 .box{
     position:fixed;
     z-index: 5;
@@ -278,10 +231,7 @@ display: none;
     color: green;
     font-weight: 500;
 }
-.line{
-    /* padding: 6%;
-    padding-bottom: 5%; */
-}
+
 
 
 }
@@ -364,7 +314,7 @@ display: none;
     background-color: white;
     position: fixed;
     margin: 2.5% 2%;
-    border-radius: 5px;
+    border-radius: 2px;
     border: 1px solid #ccc;
 }
 .written_box_2{
@@ -373,7 +323,7 @@ display: none;
     background-color: white;
     position: fixed;
     margin: 2.5% 23%;
-    border-radius: 5px;
+    border-radius: 2px;
     border: 1px solid #ccc;
 }
 .written_box_3{
@@ -382,7 +332,7 @@ display: none;
     background-color: white;
     position: fixed;
     margin: 2.5% 44%;
-    border-radius: 5px;
+    border-radius: 2px;
     border: 1px solid #ccc;
 }
 .written_box_4{
@@ -391,7 +341,7 @@ display: none;
     background-color: white;
     position: fixed;
     margin: 2.5% 65%;
-    border-radius: 5px;
+    border-radius:2px;
     border: 1px solid #ccc;
 }
 .written_content{
@@ -399,6 +349,7 @@ display: none;
     position: relative;
     top: 0;
     background-color: palevioletred;
+    font-weight:600;
 }
 .written_content div{
    margin-left: 10px;
@@ -408,6 +359,7 @@ display: none;
     position: relative;
     top: 0;
     background-color: skyblue;
+    font-weight:600;
 }
 .written_content_1 div{
    margin-left: 10px;
@@ -417,6 +369,7 @@ display: none;
     position: relative;
     top: 0;
     background-color: #FFD580;
+    font-weight:600;
 }
 .written_content_2 div{
    margin-left: 10px;
@@ -449,6 +402,7 @@ display: none;
     top: 0;
     background-color: white;
     border-bottom: 2px solid #ccc;
+    font-weight:600;
 }
 .written_content_3 div{
    margin-left: 10px;
@@ -456,8 +410,8 @@ display: none;
 .left_content button{
     position: absolute;
     bottom: 25px;
-    padding: 10px 30%;
-    max-width: 100%;
+    padding: 10px 20%;
+    /* max-width: 100%; */
     background-color: black;
     
     border-radius: 5px;
