--- a/styles/Loginstyle.module.css
+++ b/styles/Loginstyle.module.css
@@ -19,10 +19,12 @@
     justify-content: center;
     align-items: center;
     font-size: 30px;
-    padding-top:50px;
+    padding-top:45px;
+   
 }
 .pat{
     font-weight: 700;
+   padding-right:1%;
 }
 .submit{
     display: flex;
@@ -40,13 +42,14 @@
 }
 .forgotlink{
     color: blue;
+   
 }
 .logo_box{
     position: absolute;
-    padding:2%;
-    width: 12%;
-    left:4.5%;
-    top: 6%;
+    padding:1.7%;
+    width:10%;
+    left:8%;
+    top:8%;
     clip-path: circle();
     background-color: black;
     z-index: 10;
@@ -122,10 +125,10 @@
     }
     .logo_box{
         position: absolute;
-        padding:1.5%;
-        width:10%;
-        left:4.5%;
-        top: 6%;
+        padding:1.3%;
+        width:7%;
+        left:8%;
+        top:8%;
         clip-path: circle();
         background-color: black;
         z-index: 10;
