--- a/styles/Timesheet.module.css
+++ b/styles/Timesheet.module.css
@@ -18,7 +18,7 @@
     .navbar{
         position: fixed;
         width: 100%;
-        max-width: 2500px;
+        /* max-width: 2500px; */
         height: 72px;
         left: 0;
         top: 0;
@@ -187,17 +187,19 @@
     }
     .navbar{
         position:absolute;
-        width: 100%;
+        width: 120%;
         height: 72px;
-        left: 0;
+        /* left: 0; */
         top: 0;
+        margin-left: auto;
+        margin-right: auto;
         background-color: #EBECF0;
     }
     .nav_content{
         display: flex;
         position: absolute;
         width: 50%;
-        max-width: 50%;
+        /* max-width: 2500px; */
         margin: 0 20px;
         cursor: pointer;
         
@@ -333,6 +335,7 @@
       .tr{
         border-bottom: 1px solid #ccc;
     }
+    
 }
 
 
@@ -378,6 +381,69 @@
     .clock{
         display:none; 
     }
+    .navbar{
+        
+        width: 100%;
+        height: 72px;
+        
+        top: 0;
+        background-color: #EBECF0;
+    }
+       
+
+   
 }
+@media screen and (max-width:280px) {
+
+    .othercontent{
+        position: relative;
+        display: flex;
+        flex-direction:column;
+        width: 120%;
+        /* height: 80vh; */
+        margin: 70px 0px;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: #EBECF0;
+    }
+    .navbar{
+       position:absolute;
+        width: 150%;
+        height:72px;
+        display: flex;
+        flex-direction: row;
+
+        
+        background-color: #EBECF0;
+    }
+    .box{
+        width: 80%;
+        min-height: 100vh;
+        background-color:white;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+        display: flex;
+        flex-direction:column;
+    }
+    .rightcontent{
+        display: none;
+        
+    }
+    .rightcontent img{
+       display: none;
+    }
+    .devender{
+       display: none;
+    }
+    .clock{
+        display:none; 
+    }
+    
+       
+    
+}
+
+
 
 
