--- a/styles/work.module.css
+++ b/styles/work.module.css
@@ -444,129 +444,53 @@
 
     }
 }
-/* @media screen and (max-width: 550px) {
-    .r{
-        font-size: 50%;
-       padding: 1.5%;
-    }
-    .o{
-        font-size: 50%;
-    }
-    .radio_1{
-        margin: 3% 1%;
-    }
-    .radio{
-        margin-left: 15%;
-    }
-}
 
-@media screen and (max-width: 330px) {
-    .r{
-        font-size: 40%;
-       padding: 1.5%;
-    }
-    .o{
-        font-size: 40%;
-    }
-    .radio_1{
-        margin: 0% 1%;
-    }
-    .radio{
-        margin-left: 20%;
-    }
-    
-    
-
-}
-
-
-@media screen and (max-width: 800px) {
-    /* .usertext{
-        margin-right: 70px;
-
-    } */
-/*}
-@media screen and (max-width: 800px) {
-    .radio_1{
-        justify-content: center;
-        display: flex;
-        align-items: center;
-
-    }
-}
-@media screen and (max-width: 1500px) {
-    .button_content img{
-        display: none;
-
-    }
-}
-@media screen and (max-width: 1000px) {
-    .button_content div{
-        font-size: 80%;
-
-    }
-}
-@media screen and (max-width: 700px) {
-    .button_content div{
-        font-size: 60%;
-
-    }
-}
-@media screen and (max-width: 500px) {
-    .button_content div{
-        font-size: 50%;
-
-    }
-    .usertext{
-        font-size: 60%;
-    }
-    .submit{
-        font-size: 40%;
-    }
-}
-@media screen and (max-width: 1000px) {
-    .input{
-        left: 0px;
-
-    }
-}
-@media screen and (max-width: 1000px) {
-    .active,.nonactive{
-        margin: 25px 10px;
-
-    }
-}
-@media screen and (max-width: 1000px) {
-    .nav_content {
-        margin: 0 0;
-        margin-right: 10px;
-
-    }
-}
-
-@media screen and (max-width: 800px) {
-    .devender{
-        display: none;
-
-    }
-}
-@media screen and (max-width: 1000px){
-    .submit{
-        font-size: smaller;
-    }
-    .usertext{
-        font-size: 80%;
-    }
-
-}
-@media screen and (max-width: 940px) {
-    /* .usertext{
-        margin-right: 75px;
-    } */
-/* } */
 @media screen and (max-width:460px) {
     .usertext{
         margin-right: 60px;
     }
+}
+@media screen and (max-width:280px) {
+    .box{
+        width: 80%;
+        min-height: 100vh;
+        background-color:white;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+        display: flex;
+        flex-direction:column;
+    }
+    .navbar{
+        position:absolute;
+         width: 150%;
+         height:72px;
+         display: flex;
+         flex-direction:column;
+         background-color:#EBECF0;
+     }
+     .othercontent{
+        position:fixed;
+        display: flex;
+        flex-direction:column;
+        width: 100%;
+        height: 80vh;
+        margin: 72px 0px;
+        /* margin-left: auto;
+        margin-right: auto; */
+        background-color: #EBECF0;
+    }
+    .imagecontainer{
+        position: relative;
+        /* left: 0;
+        top: 0; */
+        width:100%;
+        min-height:40vh;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: #EBECF0;
+       
+       
+}
 }
   
