--- a/styles/Resetstyle.module.css
+++ b/styles/Resetstyle.module.css
@@ -1,185 +1,180 @@
-
-.title{
-    display: flex;
-    flex-direction:column;
-    justify-content:left;
-    align-items:left;
-    font-size:30px;
+.title {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: left;
+  font-size: 30px;
+  color: #131313;
 }
-.user_input{
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-    justify-content:left;
-    align-items:left;
+.user_input {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  justify-content: left;
+  align-items: left;
+  color: #707070;
+  font-size: 20px;
 }
-.user_input input{
-    width: 70%;
-    padding: 10px 10px;
-    border-radius: 5px;
-    outline: none;
-    border: 2px solid #ccc;
+.user_input input {
+  width: 70%;
+  padding: 10px 10px;
+  border-radius: 5px;
+  outline: none;
+  border: 1px solid #f2f2f2;
 }
-.usercontent{
-    display: flex;
-    flex-direction: row;
-    justify-content:left;
-    align-items:left;
-    font-size: 30px;
-    padding-top:50px;
+.usercontent {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: left;
+  font-size: 30px;
+  padding-top: 70px;
 }
-.pat{
-    font-weight: 700;
+.pat {
+  font-weight: 700;
 }
-.submit{
-    display: flex;
-    flex-direction: column;
-    justify-content:left;
-    align-items:left;
-    row-gap:10px;
-   
+.submit {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: left;
+  row-gap: 10px;
 }
-.submit button{
-    padding: 10px 0;
-    width: 70%;
-    background-color: black;
-    color: white;
-    border-radius: 5px;
+.submit button {
+  padding: 10px 0;
+  width: 70%;
+  background-color: #212020;
+  color: white;
+  border-radius: 5px;
 }
-.forgotlink{
-    color: blue;
+.forgotlink {
+  color: blue;
 }
-.logo_box{
-    position: absolute;
-    padding:1.7%;
-    width:10%;
-    left:8%;
-    top:8%;;
-    clip-path: circle();
-    background-color: black;
-    z-index: 10;
+.logo_box {
+  position: absolute;
+  padding: 1.7%;
+  width: 10%;
+  left: 8%;
+  top: 8%;
+  clip-path: circle();
+  background-color: black;
+  z-index: 10;
 }
-.container{
-    overflow-y: scroll;
-    background-color: #FFFFFF;
+.container {
+  overflow-y: scroll;
+  background-color: #ffffff;
 }
 
 @media screen and (min-width: 900px) {
-    .box{
-        width: 80%;
-        min-height: 100vh;
-        background-color:white;
-        margin-left: auto;
-        margin-right: auto;
-        position: relative;
-        display: flex;
-        flex-direction: row;
-    }
-    .content{
-        width: 50%;
-        display: flex;
-        flex-direction: column;
-        row-gap:70px;
-        background-color: white;
-        padding-left:50px;
-        
-    }
-    .image_container{
-        position: relative;
-        width: 50%;
-        background-color: #ddd;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: center;
-        padding-bottom:1.302vw ;
-    }
-    .svg{
-        position: relative;
-        width: 90%;
-    }
+  .box {
+    width: 80%;
+    min-height: 100vh;
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+  }
+  .content {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 70px;
+    background-color: white;
+    padding-left: 50px;
+  }
+  .image_container {
+    position: relative;
+    width: 50%;
+    background-color: #ddd;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding-bottom: 1.302vw;
+  }
+  .svg {
+    position: relative;
+    width: 90%;
+  }
 }
 @media screen and (max-width: 900px) {
-    .svg{
-        position: relative;
-        width: 70%;
-        /* background-color: yellow; */
-    }
-    .box{
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-    }
-    .content{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        row-gap:40px;
-        background-color: white;
-        padding-left:10px;
-    }
-    .image_container{
-        position: relative;
-        width: 90%;
-        background-color: #ddd;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-bottom:1.302vw ;
-        margin-left: auto;
-        margin-right: auto;
-        padding-top:20px;
-    }
-    .logo_box{
-        position: absolute;
-        padding:1.5%;
-        width:10%;
-        left:4.5%;
-        top: 6%;
-        clip-path: circle();
-        background-color: black;
-        z-index: 10;
-    }
+  .svg {
+    position: relative;
+    width: 70%;
+    /* background-color: yellow; */
+  }
+  .box {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  .content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 40px;
+    background-color: white;
+    padding-left: 10px;
+  }
+  .image_container {
+    position: relative;
+    width: 90%;
+    background-color: #ddd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 1.302vw;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 20px;
+  }
+  .logo_box {
+    position: absolute;
+    padding: 1.5%;
+    width: 10%;
+    left: 4.5%;
+    top: 6%;
+    clip-path: circle();
+    background-color: black;
+    z-index: 10;
+  }
 }
-@media (min-width:900px) and (max-width:970px) {
-    .usercontent{
-        display: flex;
-        flex-direction: row;
-        justify-content:left;
-        align-items:left;
-        font-size:27px; 
-        padding-top:50px;
-    }
+@media (min-width: 900px) and (max-width: 970px) {
+  .usercontent {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: left;
+    font-size: 27px;
+    padding-top: 50px;
+  }
 }
-@media screen and (max-width:460px) {
-    .usercontent{
-        font-size:25px;
-    }
-    .title{
-        font-size:25px; 
-    }
+@media screen and (max-width: 460px) {
+  .usercontent {
+    font-size: 25px;
+  }
+  .title {
+    font-size: 25px;
+  }
 }
-@media screen and (max-width:360px) {
-    .usercontent{
-        font-size:20px;
-    }
-    .title{
-        font-size:20px; 
-    }
+@media screen and (max-width: 360px) {
+  .usercontent {
+    font-size: 20px;
+  }
+  .title {
+    font-size: 20px;
+  }
 }
-@media screen and (max-width:315px) {
-    .content{
-        justify-content:left;
-        align-items:left;
-    }
+@media screen and (max-width: 315px) {
+  .content {
+    justify-content: left;
+    align-items: left;
+  }
 }
-@media screen and (max-width:315px) {
-    .usercontent{
-        font-size:16px;
-    }
+@media screen and (max-width: 315px) {
+  .usercontent {
+    font-size: 16px;
+  }
 }
-
-
-
-
-
