--- a/styles/Dashboard.module.css
+++ b/styles/Dashboard.module.css
@@ -1,314 +1,303 @@
-
 @media screen and (max-width: 1000px) {
-    .user_content div{
-        font-size: 15px;
-        margin-left: 0px;
-    }
+  .user_content div {
+    font-size: 15px;
+    margin-left: 0px;
+  }
 }
 @media screen and (max-width: 1000px) {
-    .written_content_3 div,.written_content_2 div,.written_content_1 div ,.written_content div,.button button{
-        
-        margin-left: 0px;
-    }
+  .written_content_3 div,
+  .written_content_2 div,
+  .written_content_1 div,
+  .written_content div,
+  .button button {
+    margin-left: 0px;
+  }
 }
 @media screen and (max-width: 1000px) {
-    .down{
-        font-size: 10%;
-        margin-left: 0px;
-        margin-bottom: 5px;
-    }
+  .down {
+    font-size: 10%;
+    margin-left: 0px;
+    margin-bottom: 5px;
+  }
 }
 
 @media screen and (max-width: 1100px) {
-    .left_content button{
-        padding: 10px 5px ;
-        max-width: 100%;
-    }
-
+  .left_content button {
+    padding: 10px 5px;
+    max-width: 100%;
+  }
 }
 @media screen and (max-width: 800px) {
-
-    .left_content{
-        display: flex;
-        flex-direction: column;
-        row-gap:10px;
-        margin-top: 100px;
-        align-items: center;
-        padding-bottom:10px;
-    }
-    .w-full{
-        display: flex;
-        flex-direction: column;
-    }
-    .written_content_1{
-        padding: 15px 10px;
-        position: relative;
-        top: 0;
-        background-color: skyblue;
-        font-weight:600;
-    }
-    .written_content_2{
-        padding: 15px 10px;
-        position: relative;
-        top: 0;
-        background-color: #FFD580;
-        font-weight:600;
-    }
-    .written_content_3{
-        padding: 15px 10px;
-        max-width: 100%;
-        position: relative;
-        top: 0;
-        background-color: white;
-        width: 100%;
-        border-bottom: 2px solid #ccc;
-        font-weight:600;
-       
-    }
-    .written_content{
-        padding: 15px 10px;
-        position: relative;
-        top: 0;
-        background-color: rgb(240, 182, 201);
-        font-weight:600;
-    }
-    .written_box_1{
-        width: 80%;
-        height: 90%;
-        background-color:#FFFFFF;
-        border-radius:3px;
-        border: 1px solid #ccc;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        min-height:200px;
-        justify-content: space-between;
-    }
-    .written_box_2{
-        width: 80%;
-        height: 90%;
-        background-color: white;
-        border-radius: 5px;
-        border: 1px solid #ccc;
-        min-height:200px;
-    }
-    .written_box_3{
-        width: 80%;
-        height: 90%;
-        background-color: white;
-        border-radius: 5px;
-        border: 1px solid #ccc;
-        min-height:200px;
-    }
-    .written_box_4{
-        width: 80%;
-        height: 90%;
-        background-color: white;
-        border-radius: 5px;
-        border: 1px solid #ccc;
-        min-height:200px;
-    }
-    .button{
-        width:100%;
-        background-color: black;
-        border-radius: 5px;
-        color: white;
-        text-align: center;
-        
-    }
-    .image img{
-        width: 100px;
-        height: 100px;
-        margin-top: 30px;
-        border-radius: 50%;
-    }
-    
-.image img{
+  .left_content {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    margin-top: 100px;
+    align-items: center;
+    padding-bottom: 10px;
+  }
+  .w-full {
+    display: flex;
+    flex-direction: column;
+  }
+  .written_content_1 {
+    padding: 15px 10px;
+    position: relative;
+    top: 0;
+    background-color: #effefff7;
+    font-weight: 600;
+  }
+  .written_content_2 {
+    padding: 15px 10px;
+    position: relative;
+    top: 0;
+    background-color: #fff6e0;
+    font-weight: 600;
+  }
+  .written_content_3 {
+    padding: 15px 10px;
+    max-width: 100%;
+    position: relative;
+    top: 0;
+    background-color: white;
+    width: 100%;
+    border-bottom: 2px solid #ccc;
+    font-weight: 600;
+  }
+  .written_content {
+    padding: 15px 10px;
+    position: relative;
+    top: 0;
+    background-color: #ffe7e9;
+    font-weight: 600;
+  }
+  .written_box_1 {
+    width: 80%;
+    height: 90%;
+    background-color: #ffffff;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 200px;
+    justify-content: space-between;
+  }
+  .written_box_2 {
+    width: 80%;
+    height: 90%;
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    min-height: 200px;
+  }
+  .written_box_3 {
+    width: 80%;
+    height: 90%;
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    min-height: 200px;
+  }
+  .written_box_4 {
+    width: 80%;
+    height: 90%;
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    min-height: 200px;
+  }
+  .button {
+    width: 100%;
+    background-color: #212020;
+    border-radius: 5px;
+    color: white;
+    text-align: center;
+  }
+  .image img {
     width: 100px;
     height: 100px;
     margin-top: 30px;
     border-radius: 50%;
-}
-.image {
+  }
+
+  .image img {
+    width: 100px;
+    height: 100px;
+    margin-top: 30px;
+    border-radius: 50%;
+  }
+  .image {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.user_content {
+  }
+  .user_content {
     /* width: 30%; */
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
     cursor: pointer;
-}
-.user_content div {
+  }
+  .user_content div {
     font-size: 25px;
     color: white;
-}
-.down{
+  }
+  .down {
     margin-top: 8px;
     padding: 0 5px;
-}
-.hr{
+  }
+  .hr {
     border: 1px solid white;
     margin-top: 40px;
-}
-.nav_content{
+  }
+  .nav_content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 20px 0;
-
-}
-.active{
+  }
+  .active {
     color: white;
-}
-.work{
+  }
+  .work {
     color: #ccc;
-}
-.nav_content div{
+  }
+  .nav_content div {
     font-size: 20px;
     margin: 20px 0;
     cursor: pointer;
-}
+  }
 
-.box{
-    position:fixed;
+  .box {
+    position: fixed;
     z-index: 5;
-    background-color: #3A3B3C;
+    background-color: #393e46;
     width: 100%;
-    top:0;
-}
-.box1{
-    position:fixed;
+    top: 0;
+  }
+  .box1 {
+    position: fixed;
     z-index: 5;
-    background-color: #3A3B3C;
+    background-color: #393e46;
     width: 70%;
-    top:0;
+    top: 0;
     min-height: 100vh;
-}
-.b{
-display: none;
-}
-.b1{
+  }
+  .b {
+    display: none;
+  }
+  .b1 {
     display: contents;
-}
-.nav{
-    height:40px;
+  }
+  .nav {
+    height: 40px;
     position: relative;
     display: flex;
     flex-direction: row;
-   
-}
-.lines_box{
-    padding-top:10px;
-    width:60px;
+  }
+  .lines_box {
+    width: 60px;
     align-self: center;
-   
-}
-.D_box{
-    font-size:20px;
+  }
+  .D_box {
+    font-size: 20px;
     /* align-items: flex-end; */
-    align-self:center;
+    align-self: center;
     cursor: pointer;
-}
-.challenge_box{
+  }
+  .challenge_box {
     padding: 3%;
     padding-top: 0%;
     position: relative;
-    margin:5%;
+    margin: 5%;
     background-color: aliceblue;
     border: 5px;
     border-radius: 5%;
-}
-.challenge_box1{
-    padding:5%;
+  }
+  .challenge_box1 {
+    padding: 5%;
     font-size: smaller;
-}
-.id{
+  }
+  .id {
     color: green;
     font-weight: 500;
-}
-
-
-
+  }
 }
 @media screen and (min-width: 800px) {
-.left_content{
+  .left_content {
     position: fixed;
     width: 85%;
     height: 100%;
     right: 0;
     top: 0;
-    background-color: white;
+    background-color: #f1f1f1;
     overflow-y: scroll;
     /* display: flex;
     justify-content: center;
     align-items: center;
      */
-}
-.box{
+  }
+  .box {
     width: 15%;
-   min-height:100vh;
-    position:fixed;
+    min-height: 100vh;
+    position: fixed;
     left: 0;
-    background-color: #3A3B3C;
-
-}
-.image img{
+    background-color: #393e46;
+  }
+  .image img {
     width: 30%;
     height: 30%;
     margin-top: 30px;
     border-radius: 50px;
-}
-.image {
+  }
+  .image {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.user_content {
+  }
+  .user_content {
     /* width: 30%; */
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
     cursor: pointer;
-}
-.user_content div {
+  }
+  .user_content div {
     font-size: 25px;
     color: white;
-}
-.down{
+  }
+  .down {
     margin-top: 8px;
     padding: 0 5px;
-}
-.hr{
-    border: 1px solid white;
+  }
+  .hr {
+    border: 1px solid #999999;
     margin-top: 40px;
-}
-.nav_content{
+  }
+  .nav_content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 20px 0;
-
-}
-.active{
+  }
+  .active {
     color: white;
-}
-.work{
-    color: #ccc;
-}
-.nav_content div{
+  }
+  .work {
+    color: #999999;
+  }
+  .nav_content div {
     font-size: 20px;
     margin: 20px 0;
     cursor: pointer;
-}
+  }
 
-.written_box_1{
+  .written_box_1 {
     width: 18%;
     height: 90%;
     background-color: white;
@@ -316,8 +305,8 @@ display: none;
     margin: 2.5% 2%;
     border-radius: 2px;
     border: 1px solid #ccc;
-}
-.written_box_2{
+  }
+  .written_box_2 {
     width: 18%;
     height: 90%;
     background-color: white;
@@ -325,8 +314,8 @@ display: none;
     margin: 2.5% 23%;
     border-radius: 2px;
     border: 1px solid #ccc;
-}
-.written_box_3{
+  }
+  .written_box_3 {
     width: 18%;
     height: 90%;
     background-color: white;
@@ -334,99 +323,100 @@ display: none;
     margin: 2.5% 44%;
     border-radius: 2px;
     border: 1px solid #ccc;
-}
-.written_box_4{
+  }
+  .written_box_4 {
     width: 18%;
     height: 90%;
     background-color: white;
     position: fixed;
     margin: 2.5% 65%;
-    border-radius:2px;
+    border-radius: 2px;
     border: 1px solid #ccc;
-}
-.written_content{
+  }
+  .written_content {
     padding: 15px 0;
     position: relative;
     top: 0;
-    background-color: palevioletred;
-    font-weight:600;
-}
-.written_content div{
-   margin-left: 10px;
-}
-.written_content_1{
+    background-color: #ffe7e9;
+    font-weight: 600;
+  }
+  .written_content div {
+    margin-left: 10px;
+  }
+  .written_content_1 {
     padding: 15px 0;
     position: relative;
     top: 0;
-    background-color: skyblue;
-    font-weight:600;
-}
-.written_content_1 div{
-   margin-left: 10px;
-}
-.written_content_2{
+    background-color: #effefff7;
+    font-weight: 600;
+  }
+  .written_content_1 div {
+    margin-left: 10px;
+  }
+  .written_content_2 {
     padding: 15px 0;
     position: relative;
+    box-shadow: #fff6e0;
     top: 0;
-    background-color: #FFD580;
-    font-weight:600;
-}
-.written_content_2 div{
-   margin-left: 10px;
-}
-.challenge_box{
+    background-color: #fff6e0;
+    font-weight: 600;
+  }
+  .written_content_2 div {
+    margin-left: 10px;
+  }
+  .challenge_box {
     padding: 3%;
     padding-top: 0%;
     position: relative;
-    margin:5%;
-    background-color: aliceblue;
+    margin: 5%;
+    background-color: #f1f1f1;
     border: 5px;
     border-radius: 5%;
-}
-.challenge_box1{
-    padding:5%;
+  }
+  .challenge_box1 {
+    padding: 5%;
     font-size: smaller;
-}
-.id{
+    color: #131313;
+    font-weight: 500;
+  }
+  .id {
     color: green;
     font-weight: 500;
-}
-/* .line{
+  }
+  /* .line{
     padding: 6%;
     padding-bottom: 5%;
 } */
-.written_content_3{
+  .written_content_3 {
     padding: 15px 0;
     max-width: 100%;
     position: relative;
     top: 0;
     background-color: white;
     border-bottom: 2px solid #ccc;
-    font-weight:600;
-}
-.written_content_3 div{
-   margin-left: 10px;
-}
-.left_content button{
+    font-weight: 600;
+  }
+  .written_content_3 div {
+    margin-left: 10px;
+  }
+  .left_content button {
     position: absolute;
     bottom: 25px;
     padding: 10px 20%;
     /* max-width: 100%; */
-    background-color: black;
-    
+    background-color: #212020;
+
     border-radius: 5px;
-}
-.button{
+  }
+  .button {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  .button button {
+    color: white;
+  }
 }
-.button button{
-    color: white;   
-}
-
-
-}
-.w-full{
-    overflow-y: scroll;
+.w-full {
+  overflow-y: scroll;
 }
