--- a/styles/Forgotstyle.module.css
+++ b/styles/Forgotstyle.module.css
@@ -1,183 +1,222 @@
-
-.container{
-    overflow-y: scroll;
-    background-color: #FFFFFF;
+.container {
+  overflow-y: scroll;
+  background-color: #ffffff;
 }
-.usercontent{
-    display: flex;
-    flex-direction: row;
-    justify-content:center;
-    align-items:center;
+
+.pat {
+  font-weight: 700;
+}
+
+.user_input input {
+  width: 70%;
+  padding: 10px 10px;
+  border-radius: 5px;
+  outline: none;
+  border: 1px solid #f2f2f2;
+}
+
+.submit button {
+  padding: 10px 0;
+  width: 70%;
+  background-color: #212020;
+  color: white;
+  border-radius: 5px;
+}
+/* .forgotlink {
+  color: blue;
+} */
+.logo_box {
+  position: absolute;
+  padding: 1.7%;
+  width: 10%;
+  left: 8%;
+  top: 8%;
+  clip-path: circle();
+  background-color: black;
+  z-index: 10;
+}
+@media screen and (min-width: 900px) {
+  .box {
+    width: 80%;
+    min-height: 100vh;
+    background-color: white;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+  }
+  .content {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 70px;
+    background-color: white;
+    padding-top: 20px;
+  }
+  .image_container {
+    position: relative;
+    width: 50%;
+    background-color: #f5f4f4;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding-bottom: 1.302vw;
+  }
+  .svg {
+    position: relative;
+    width: 90%;
+  }
+  .usercontent {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: left;
+    /* margin-left: auto;
+    margin-right: auto; */
     font-size: 30px;
-    padding-top:50px;
-}
-.pat{
-    font-weight: 700;
-}
-.user_input{
+    padding-top: 50px;
+    padding-left: 60px;
+  }
+  .user_input {
     display: flex;
     flex-direction: column;
     row-gap: 10px;
-    justify-content:center;
-    align-items:center;
-}
-.user_input input{
-    width: 70%;
-    padding: 10px 10px;
-    border-radius: 5px;
-    outline: none;
-    border: 2px solid #ccc;
-}
-.title{
-    display: flex;
-    flex-direction:column;
-    justify-content:center;
-    align-items:center;
-    font-size:25px;
-}
-.submit{
+    justify-content: left;
+    align-items: left;
+    padding-left: 60px;
+  }
+  .title {
     display: flex;
     flex-direction: column;
-    justify-content:center;
-    align-items:center;
-    row-gap:10px;
+    justify-content: left;
+    align-items: left;
+    font-size: 30px;
+    padding-left: 60px;
+  }
+  .submit {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: left;
+    padding-left: 60px;
+    row-gap: 10px;
+  }
 }
-.submit button{
-    padding: 10px 0;
+@media screen and (max-width: 900px) {
+  .svg {
+    position: relative;
     width: 70%;
-    background-color: black;
-    color: white;
-    border-radius: 5px;
-}
-.forgotlink{
-    color: blue;
-}
-.logo_box{
+    /* background-color: yellow; */
+  }
+  .box {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  .content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: white;
+  }
+  .image_container {
+    position: relative;
+    width: 90%;
+    background-color: #ddd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 1.302vw;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 20px;
+  }
+  .logo_box {
     position: absolute;
-    padding:1.7%;
-    width:10%;
-    left:8%;
-    top:8%;
+    padding: 1.3%;
+    width: 7%;
+    left: 8%;
+    top: 8%;
     clip-path: circle();
     background-color: black;
     z-index: 10;
+  }
+  .usercontent {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* margin-left: auto;
+    margin-right: auto; */
+    font-size: 30px;
+    padding-top: 50px;
+    padding-left: 60px;
+  }
+  .user_input {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    justify-content: center;
+    align-items: center;
+    padding-left: 60px;
+  }
+  .title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    padding-left: 60px;
+  }
+  .submit {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-left: 60px;
+    row-gap: 10px;
+  }
 }
-@media screen and (min-width: 900px) {
-    .box{
-        width: 80%;
-        min-height: 100vh;
-        background-color:white;
-        margin-left: auto;
-        margin-right: auto;
-        position: relative;
-        display: flex;
-        flex-direction: row;
-    }
-    .content{
-        width: 50%;
-        display: flex;
-        flex-direction: column;
-        row-gap:70px;
-        background-color: white;
-        
-    }
-    .image_container{
-        position: relative;
-        width: 50%;
-        background-color: #ddd;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: center;
-        padding-bottom:1.302vw ;
-    }
-    .svg{
-        position: relative;
-        width: 90%;
-    }
+@media (min-width: 900px) and (max-width: 970px) {
+  .usercontent {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: left;
+    padding-left: 60px;
+    font-size: 27px;
+    padding-top: 50px;
+  }
 }
-@media screen and (max-width: 900px) {
-    .svg{
-        position: relative;
-        width: 70%;
-        /* background-color: yellow; */
-    }
-    .box{
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-    }
-    .content{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        row-gap:40px;
-        margin-left: auto;
-        margin-right: auto;
-        background-color: white;
-    }
-    .image_container{
-        position: relative;
-        width: 90%;
-        background-color: #ddd;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-bottom:1.302vw ;
-        margin-left: auto;
-        margin-right: auto;
-        padding-top:20px;
-    }
-    .logo_box{
-        position: absolute;
-        padding:1.3%;
-        width:7%;
-        left:8%;
-        top:8%;
-        clip-path: circle();
-        background-color: black;
-        z-index: 10;
-    }
+@media screen and (max-width: 430px) {
+  .usercontent {
+    font-size: 23px;
+  }
+  .title {
+    font-size: 23px;
+  }
 }
-@media (min-width:900px) and (max-width:970px) {
-    .usercontent{
-        display: flex;
-        flex-direction: row;
-        justify-content:left;
-        align-items:left;
-        padding-left:60px;
-        font-size:27px; 
-        padding-top:50px;
-    }
+@media screen and (max-width: 430px) {
+  .usercontent {
+    font-size: 20px;
+  }
+  .title {
+    font-size: 20px;
+  }
 }
-@media screen and (max-width:430px) {
-    .usercontent{
-        font-size:23px; 
-    }
-    .title{
-        font-size:23px; 
-    }
+@media screen and (max-width: 240px) {
+  .usercontent {
+    font-size: 18px;
+  }
+  .title {
+    font-size: 18px;
+  }
+  .submit {
+    font-size: 12px;
+  }
 }
-@media screen and (max-width:430px) {
-    .usercontent{
-        font-size:20px; 
-    }
-    .title{
-        font-size:20px; 
-    }
-}
-@media screen and (max-width:240px) {
-    .usercontent{
-        font-size:18px; 
-    }
-    .title{
-        font-size:18px; 
-    }
-    .submit{
-       font-size:12px;
-    }
-}
-
-
