--- a/styles/Loginstyle.module.css
+++ b/styles/Loginstyle.module.css
@@ -1,154 +1,153 @@
-
-.user_input{
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-    justify-content: center;
-    align-items: center;
+.user_input {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  justify-content: center;
+  align-items: center;
+  padding-left: 40px;
 }
-.user_input input{
-    width: 70%;
-    padding: 10px 10px;
-    border-radius: 5px;
-    outline: none;
-    border: 2px solid #ccc;
+.user_input input {
+  width: 70%;
+  padding: 10px 10px;
+  border-radius: 5px;
+  outline: none;
+  border: 1px solid #f2f2f2;
 }
-.usercontent{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    padding-top:45px;
-   
+.usercontent {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 32px;
+  padding-top: 45px;
+  color: #131313;
+  padding-left: 40px;
 }
-.pat{
-    font-weight: 700;
-   padding-right:1%;
+.pat {
+  font-weight: 700;
+  padding-right: 1%;
 }
-.submit{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    row-gap:10px;
+.submit {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  padding-left: 40px;
+  justify-items: center;
+  align-items: center;
 }
-.submit button{
-    padding: 10px 0;
-    width: 70%;
-    background-color: black;
-    color: white;
-    border-radius: 5px;
+.submit button {
+  padding: 10px 0;
+  width: 70%;
+  background-color: #212020;
+  color: white;
+  border-radius: 5px;
 }
-.forgotlink{
-    color: blue;
-   
+.forgotlink {
+  color: #0278ae;
+  cursor: pointer;
 }
-.logo_box{
-    position: absolute;
-    padding:1.7%;
-    width:10%;
-    left:8%;
-    top:8%;
-    clip-path: circle();
-    background-color: black;
-    z-index: 10;
+.logo_box {
+  position: absolute;
+  padding: 1.7%;
+  width: 10%;
+  left: 8%;
+  top: 8%;
+  clip-path: circle();
+  background-color: black;
+  z-index: 10;
 }
-.container{
-    overflow-y: scroll;
-    background-color: #FFFFFF;
+.container {
+  overflow-y: scroll;
+  background-color: #ffffff;
 }
 
 @media screen and (min-width: 900px) {
-    .box{
-        width: 80%;
-        min-height: 100vh;
-        background-color:white;
-        margin-left: auto;
-        margin-right: auto;
-        position: relative;
-        display: flex;
-        flex-direction: row;
-    }
-    .content{
-        width: 50%;
-        display: flex;
-        flex-direction: column;
-        row-gap:70px;
-        background-color: white;
-        
-    }
-    .image_container{
-        position: relative;
-        width: 50%;
-        background-color: #ddd;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: center;
-        padding-bottom:1.302vw ;
-    }
-    .svg{
-        position: relative;
-        width: 90%;
-    }
+  .box {
+    width: 80%;
+    min-height: 100vh;
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+  }
+  .content {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 70px;
+    background-color: #ffffff;
+    padding-top: 20px;
+  }
+  .image_container {
+    position: relative;
+    width: 50%;
+    background-color: #ddd;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding-bottom: 1.302vw;
+  }
+  .svg {
+    position: relative;
+    width: 90%;
+  }
 }
 @media screen and (max-width: 900px) {
-    .svg{
-        position: relative;
-        width: 70%;
-        /* background-color: yellow; */
-    }
-    .box{
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-    }
-    .content{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        row-gap:40px;
-        background-color: white;
-    }
-    .image_container{
-        position: relative;
-        width: 90%;
-        background-color: #ddd;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-bottom:1.302vw ;
-        margin-left: auto;
-        margin-right: auto;
-        padding-top:20px;
-    }
-    .logo_box{
-        position: absolute;
-        padding:1.3%;
-        width:7%;
-        left:8%;
-        top:8%;
-        clip-path: circle();
-        background-color: black;
-        z-index: 10;
-    }
+  .svg {
+    position: relative;
+    width: 70%;
+    /* background-color: yellow; */
+  }
+  .box {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  .content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 40px;
+    background-color: white;
+  }
+  .image_container {
+    position: relative;
+    width: 90%;
+    background-color: #ddd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 1.302vw;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 20px;
+  }
+  .logo_box {
+    position: absolute;
+    padding: 1.3%;
+    width: 7%;
+    left: 8%;
+    top: 8%;
+    clip-path: circle();
+    background-color: black;
+    z-index: 10;
+  }
 }
 @media screen and (max-width: 400px) {
-    .usercontent{
-        font-size:25px;
-    } 
+  .usercontent {
+    font-size: 25px;
+  }
 }
 @media screen and (max-width: 390px) {
-    .usercontent{
-        font-size:20px;
-    } 
+  .usercontent {
+    font-size: 20px;
+  }
 }
-@media screen and (max-width:240px) {
-
-    .usercontent{
-        font-size:15px;
-    } 
+@media screen and (max-width: 240px) {
+  .usercontent {
+    font-size: 15px;
+  }
 }
-
-
