--- a/styles/Timesheet.module.css
+++ b/styles/Timesheet.module.css
@@ -2,83 +2,71 @@
   overflow-y: scroll;
   background-color: #ffffff;
 }
-
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 650px) {
   .box {
-    width: 80%;
-    min-height: 100vh;
-    background-color: white;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
     display: flex;
     flex-direction: row;
+    width: 100%;
   }
-
+  .box_1 {
+    background-color: #eeeeee;
+    width: 50%;
+    /* min-height: 100vh; */
+    display: flex;
+    flex-direction: column;
+    /* position: absolute; */
+  }
+  .box_2 {
+    /* background-color: pink; */
+    width: 50%;
+    justify-content: center;
+    align-content: center;
+  }
   .navbar {
-    position: fixed;
+    position: relative;
     width: 100%;
     /* max-width: 2500px; */
-    height: 72px;
+    /* height: 72px; */
     left: 0;
     top: 0;
     background-color: #ebecf0;
   }
   .nav_content {
     display: flex;
-    position: absolute;
-    width: 50%;
-    max-width: 50%;
-    margin: 0 20px;
     cursor: pointer;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 30px;
   }
   .nonactive {
-    margin: 25px 45px;
+    /* margin: 25px 45px; */
     color: gray;
     cursor: pointer;
   }
   .active {
     color: black;
-    margin: 25px 45px;
+    /* margin: 25px 45px; */
     cursor: pointer;
   }
-  .rightcontent {
-    position: absolute;
-    right: 0;
-    width: 50%;
-    height: 72px;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-  }
-  .rightcontent img {
-    height: 80%;
-    border-radius: 50px;
-    margin: 0 30px;
-    cursor: pointer;
-  }
-  .devender {
-    font-size: 15px;
-    cursor: pointer;
-  }
-
   .othercontent {
+    display: flex;
+    flex-direction: column;
     position: relative;
+    min-height: 90vh;
     width: 100%;
-    height: 80vh;
-    margin: 70px auto;
-    background-color: teal;
+    justify-content: center;
+    align-content: center;
   }
   .imagecontainer {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 50%;
-    height: 100%;
+    position: relative;
+    width: 70%;
+    min-height: 80vh;
     background-color: #ebecf0;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
   }
   .imagecontainer img {
     position: absolute;
@@ -89,68 +77,189 @@
     bottom: 20px;
   }
   .content {
-    width: 51%;
+    display: flex;
+    flex-direction: column;
+  }
+  .work_content {
+    display: flex;
+    flex-direction: row;
+    padding: 30px;
+    column-gap: 5px;
+
+    justify-content: center;
+    align-items: center;
+  }
+  .content {
     height: 100%;
     right: 0;
     top: 0;
     background-color: white;
+    /* position: absolute; */
+  }
+  .clock {
+    color: #2196f3;
+    cursor: pointer;
+  }
+  .write {
+    color: #2196f3;
+    cursor: pointer;
+  }
+  .para {
+    width: 80%;
+    font-size: 17px;
+  }
+  .para p {
+    padding-top: 10px;
+  }
+  .work_content {
+    display: flex;
+    width: 100%;
+    height: 20vh;
+    border-bottom: 1px solid #f2f2f2;
+    justify-content: center;
+    align-items: center;
+  }
+  .table_content {
+    overflow-y: scroll;
+    width: 100%;
+    min-height: 85vh;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .last {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    font-size: 20px;
+    padding: 10px;
+    color: #131313;
+  }
+  .table {
+    width: 80%;
+    height: auto;
+    top: 30px;
+    position: relative;
+  }
+  .td {
+    text-align: left;
+    padding: 16px;
+  }
+  .tr {
+    border-bottom: 1px solid #f2f2f2;
+  }
+}
+@media screen and (max-width: 650px) {
+  .box {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  .box_1 {
+    background-color: #eeeeee;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* position: absolute; */
+  }
+  .box_2 {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  .navbar {
+    position: relative;
+    width: 100%;
+    background-color: #ebecf0;
+  }
+  .nav_content {
+    display: flex;
+    cursor: pointer;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 30px;
+  }
+  .nonactive {
+    color: gray;
+    cursor: pointer;
+  }
+  .active {
+    color: black;
+    cursor: pointer;
+  }
+  .imagecontainer {
+    position: relative;
+    width: 50%;
+    min-height: 40vh;
+    background-color: #ebecf0;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+  .imagecontainer img {
     position: absolute;
-    margin: 0px 0;
+    width: 80%;
+    max-width: 80%;
+    max-height: 80%;
+    height: auto;
+    bottom: 20px;
+  }
+  .othercontent {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  .content {
+    width: 100%;
+    padding-top: 5%;
+    background-color: white;
+    position: relative;
+    justify-content: center;
+    align-items: center;
   }
   .clock {
     color: aqua;
-    margin-right: 5px;
-    margin-top: 10px;
     cursor: pointer;
   }
   .write {
     color: aqua;
     cursor: pointer;
   }
+  .para {
+    font-size: 17px;
+    justify-content: center;
+    align-items: center;
+  }
+  .para p {
+    padding-top: 5px;
+  }
   .work_content {
     display: flex;
     width: 100%;
-    height: 20vh;
-    border-bottom: 2px solid #ccc;
+    border-bottom: 1px solid #ccc;
     justify-content: center;
     align-items: center;
-  }
-  .para {
-    width: 80%;
-    font-size: 17px;
-  }
-  .time-content {
-    position: relative;
-    top: 10px;
-  }
-  .time-last {
-    position: absolute;
-    left: 50px;
-    font-size: 20px;
-  }
-  .table {
-    position: relative;
-    width: 100%;
-    min-height: 40vh;
-    top: 150px;
-    background-color: white;
-    overflow-y: scroll;
+    column-gap: 5px;
   }
   .table_content {
+    overflow-y: scroll;
     width: 100%;
-    height: 75%;
-    background-color: white;
+    min-height: 85vh;
+    justify-content: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    overflow-y: scroll;
   }
   .last {
-    position: relative;
-    margin-top: 300px;
-    left: -200px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
     font-size: 20px;
+    padding: 10px;
   }
 
   .table {
@@ -167,250 +276,11 @@
     border-bottom: 1px solid #ccc;
   }
 }
-@media screen and (max-width: 600px) {
-  .box {
-    width: 80%;
-    min-height: 100vh;
-    background-color: white;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-  }
-  .navbar {
-    position: absolute;
-    width: 120%;
-    height: 72px;
-    /* left: 0; */
-    top: 0;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #ebecf0;
-  }
-  .nav_content {
-    display: flex;
-    position: absolute;
-    width: 50%;
-    /* max-width: 2500px; */
-    margin: 0 20px;
-    cursor: pointer;
-  }
-  .nonactive {
-    margin: 25px 45px;
-    color: gray;
-    cursor: pointer;
-  }
-  .active {
-    color: black;
-    margin: 25px 45px;
-    cursor: pointer;
-  }
-  .rightcontent {
-    position: absolute;
-    right: 0;
-    width: 50%;
-    height: 72px;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-  }
-  .rightcontent img {
-    height: 80%;
-    border-radius: 50px;
-    margin: 0 30px;
-    cursor: pointer;
-  }
-  .devender {
-    font-size: 15px;
-    cursor: pointer;
-  }
-  .othercontent {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    /* height: 80vh; */
-    margin: 70px auto;
-    background-color: teal;
-  }
-  .imagecontainer {
-    position: relative;
-    /* left: 0; */
-    top: 0;
-    width: 100%;
-    min-height: 40vh;
-    background-color: #ebecf0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .imagecontainer img {
-    position: absolute;
-    width: 80%;
-    max-width: 80%;
-    max-height: 80%;
-    height: auto;
-    bottom: 20px;
-  }
-  .content {
-    width: 100%;
-    /* min-height:50vh; */
-    /* right: 0;
-        top: 0; */
-    background-color: white;
-    position: relative;
-    /* margin: 0px 0; */
-  }
-  .last {
-    position: relative;
-    /* margin-top: 300px; */
-    left: 0px;
-    font-size: 20px;
-  }
-  .work_content {
-    display: flex;
-    width: 100%;
-    /* height:15vh; */
-    border-bottom: 2px solid #ccc;
-    justify-content: center;
-    align-items: center;
+@media screen and (max-width: 500px) {
+  .clock {
+    display: none;
   }
   .para {
-    width: 80%;
-    font-size: 20px;
-  }
-  .time-content {
-    position: relative;
-    top: 10px;
-  }
-  .time-last {
-    position: absolute;
-    left: 50px;
-    font-size: 20px;
-  }
-  .table {
-    position: relative;
-    width: 100%;
-    min-height: 70vh;
-    /* top: 150px; */
-    background-color: white;
-    overflow-y: scroll;
-  }
-  .table {
-    width: 80%;
-    /* height: auto; */
-    top: 20px;
-    position: relative;
-  }
-
-  .table_content {
-    width: 100%;
-    /* height: 75%; */
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    overflow-y: scroll;
-  }
-  .td {
-    text-align: center;
-    padding: 16px;
-  }
-  .tr {
-    border-bottom: 1px solid #ccc;
-  }
-}
-
-@media screen and (max-width: 1000px) {
-  .active,
-  .nonactive {
-    margin: 25px 20px;
-  }
-}
-@media screen and (max-width: 1300px) {
-  .last {
-    left: 10px;
-  }
-}
-/* @media screen and (max-width: 1000px) {
-    .table{
-        width: 40%;
-        margin-left: 50px;
-
-    }
-} */
-@media screen and (max-width: 1000px) {
-  .nav_content {
-    margin: 0 0;
-    margin-right: 10px;
-  }
-}
-/* @media screen and (max-width: 800px) {
-    .rightcontent img{
-        margin: 0 5px;
-        margin-left: 100px;
-        display: none;
-
-    }
-} */
-@media screen and (max-width: 500px) {
-  .rightcontent {
-    display: none;
-  }
-  .clock {
-    display: none;
-  }
-  .navbar {
-    width: 100%;
-    height: 72px;
-
-    top: 0;
-    background-color: #ebecf0;
-  }
-}
-@media screen and (max-width: 280px) {
-  .othercontent {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    width: 120%;
-    /* height: 80vh; */
-    margin: 70px 0px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #ebecf0;
-  }
-  .navbar {
-    position: absolute;
-    width: 150%;
-    height: 72px;
-    display: flex;
-    flex-direction: row;
-
-    background-color: #ebecf0;
-  }
-  .box {
-    width: 80%;
-    min-height: 100vh;
-    background-color: white;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-  }
-  .rightcontent {
-    display: none;
-  }
-  .rightcontent img {
-    display: none;
-  }
-  .devender {
-    display: none;
-  }
-  .clock {
-    display: none;
+    padding-left: 8px;
   }
 }
