--- a/styles/work.module.css
+++ b/styles/work.module.css
@@ -4,59 +4,52 @@
 }
 @media screen and (min-width: 900px) {
   .box {
-    width: 80%;
-    min-height: 100vh;
-    background-color: white;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
     display: flex;
     flex-direction: row;
+  }
+  .box_1 {
+    background-color: #eeeeee;
+    width: 50%;
+    /* min-height: 100vh; */
+    display: flex;
+    flex-direction: column;
+    /* position: absolute; */
+  }
+  .box_2 {
+    /* background-color: pink; */
+    width: 50%;
+    justify-content: center;
+    align-content: center;
+    background-color: #ffffff;
   }
   .navbar {
     position: relative;
     width: 100%;
-    max-width: 2500px;
-    height: 72px;
+    /* max-width: 2500px; */
+    /* height: 72px; */
     left: 0;
     top: 0;
     background-color: #ebecf0;
   }
   .nav_content {
     display: flex;
-    position: absolute;
-    width: 50%;
-    max-width: 50%;
-    margin: 0 20px;
+
+    /* width: 50%;
+  max-width: 50%; */
+    /* margin: 0 20px; */
     cursor: pointer;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 30px;
   }
   .nonactive {
-    margin: 25px 45px;
+    /* margin: 25px 45px; */
     color: gray;
     cursor: pointer;
   }
   .active {
-    color: black;
-    margin: 25px 45px;
-    cursor: pointer;
-  }
-  .rightcontent {
-    position: absolute;
-    right: 0;
-    width: 50%;
-    height: 72px;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-  }
-  .rightcontent img {
-    height: 80%;
-    border-radius: 50px;
-    margin: 0 30px;
-    cursor: pointer;
-  }
-  .devender {
-    font-size: 15px;
+    color: #212020;
+    /* margin: 25px 45px; */
     cursor: pointer;
   }
   .othercontent {
@@ -70,196 +63,17 @@
     align-content: center;
   }
   .imagecontainer {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 50%;
+    position: relative;
+    /* left: 0;
+    top: 0; */
+    width: 70%;
     min-height: 80vh;
     background-color: #ebecf0;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  .imagecontainer img {
-    position: absolute;
-    width: 80%;
-    max-width: 80%;
-    max-height: 80%;
-    height: auto;
-    bottom: 20px;
-  }
-  .content {
-    width: 51%;
-    height: 100%;
-    right: 0;
-    top: 0;
-    background-color: white;
-    position: absolute;
-    margin: 0px 0;
-  }
-  .work_content {
-    width: 90%;
-    height: 15%;
-    margin: 10px auto;
-    background-color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    margin-bottom: -30px;
-  }
-
-  .radio {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 30px;
-  }
-  .radio div {
-    margin-right: 10px;
-  }
-  .radio_1 {
-    margin: 0 10px;
-  }
-  .userinput {
-    width: 50%;
-    height: 58%;
-    padding: 15px 0;
-    border: 2px solid black;
-    outline: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-  }
-
-  .usertext {
-    position: absolute;
-    width: 35%;
-    margin-left: 120px;
-    outline: none;
-    border: 2px solid #ccc;
-    border-radius: 2px;
-    padding: 0 5px;
-  }
-
-  .button_content {
-    width: 20%;
-    height: 60%;
-    padding: 15px 0;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 15px 0;
-    background-color: black;
-  }
-
-  .button_content img {
-    width: 14%;
-    height: 100%;
-    margin: 0 6px;
-  }
-  .button_content div {
-    color: white;
-  }
-  .submit {
-    width: 20%;
-    height: 10%;
-    padding: 10px 10px;
-    border-radius: 5px;
-    background-color: black;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-  }
-}
-@media screen and (max-width: 900px) {
-  .box {
-    width: 80%;
-    min-height: 100vh;
-    background-color: white;
     margin-left: auto;
     margin-right: auto;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-  }
-  .navbar {
-    position: relative;
-    width: 100%;
-    max-width: 2500px;
-    height: 72px;
-    left: 0;
-    top: 0;
-    background-color: #ebecf0;
-  }
-  .nav_content {
-    display: flex;
-    flex-direction: row;
-    position: absolute;
-    width: 50%;
-    max-width: 50%;
-    margin: 0 20px;
-    cursor: pointer;
-  }
-  .nonactive {
-    margin: 20px 10px;
-    color: gray;
-    cursor: pointer;
-  }
-  .active {
-    color: black;
-    margin: 20px 20px;
-    cursor: pointer;
-  }
-  .rightcontent {
-    position: absolute;
-    right: 0;
-    width: 50%;
-    height: 72px;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-  }
-  .rightcontent img {
-    height: 80%;
-    border-radius: 50px;
-    margin: 0 30px;
-    cursor: pointer;
-  }
-  .devender {
-    font-size: 15px;
-    cursor: pointer;
-  }
-  .othercontent {
-    position: relative;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    /* height:50%; */
-    /* margin: 0px auto; */
-    background-color: teal;
-  }
-  .imagecontainer {
-    position: relative;
-    left: 0;
-    top: 0;
-    width: 100%;
-    min-height: 40vh;
-    background-color: #ebecf0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
   .imagecontainer img {
     position: absolute;
@@ -269,11 +83,12 @@
     height: auto;
     bottom: 20px;
   }
+
   .content {
     width: 100%;
     /* height: 100%; */
     right: 0;
-
+    padding-top: 10%;
     background-color: white;
     position: relative;
     /* margin: 0px 0; */
@@ -281,66 +96,74 @@
   .work_content {
     width: 90%;
     height: 15%;
-    margin: 10px auto;
+    /* margin: 10px auto; */
     background-color: white;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
-    margin-bottom: -30px;
+    /* margin-top: 20px;
+  margin-bottom: -30px; */
   }
 
   .radio {
     position: absolute;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-left: 30px;
-  }
-  .radio div {
-    margin-right: 10px;
+    /* justify-content: center;
+    align-items: center; */
+    column-gap: 10px;
+    /* padding-left: 50px; */
+
+    /* margin-left: 30px; */
   }
   .radio_1 {
-    margin: 0 10px;
+    display: flex;
+    flex-direction: row;
+    column-gap: 5px;
   }
+
   .userinput {
     width: 50%;
     height: 58%;
     padding: 15px 0;
-    border: 2px solid black;
+    border: 1px solid #212020;
     outline: none;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    border-bottom-right-radius: 3px;
+    border-top-right-radius: 3px;
   }
 
   .usertext {
     position: absolute;
-    width: 35%;
-    margin-left: 120px;
+    width: 80%;
+    /* margin-left: 120px; */
     outline: none;
-    border: 2px solid #ccc;
-    border-radius: 2px;
+    border: 1px solid #eeeeee;
+    border-radius: 4px;
     padding: 0 5px;
   }
 
   .button_content {
-    width: 20%;
+    width: 22%;
     height: 60%;
-    padding: 15px 0;
+    padding: 16px 0;
     position: relative;
     display: flex;
-    justify-content: center;
+    /* justify-content: end; */
     align-items: center;
     margin: 15px 0;
-    background-color: black;
+    background-color: #212020;
+    padding-left: 15px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
   }
 
   .button_content img {
-    width: 14%;
+    width: 15%;
     height: 100%;
     margin: 0 6px;
   }
@@ -364,103 +187,303 @@
     align-items: center;
     margin-top: 50px;
   }
+  .down {
+    z-index: 10;
+  }
 }
+@media screen and (max-width: 900px) {
+  .box {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  .box_1 {
+    background-color: #eeeeee;
+    width: 100%;
+    /* min-height: 100vh; */
+    display: flex;
+    flex-direction: column;
+    /* position: absolute; */
+  }
+  .box_2 {
+    /* background-color: pink; */
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  .navbar {
+    position: relative;
+    width: 100%;
+    /* max-width: 2500px; */
+    /* height: 72px; */
+    /* left: 0; */
+    /* top: 0; */
+    background-color: #ebecf0;
+  }
+  .nav_content {
+    display: flex;
 
+    /* width: 50%;
+  max-width: 50%; */
+    /* margin: 0 20px; */
+    cursor: pointer;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 30px;
+  }
+  .nonactive {
+    /* margin: 25px 45px; */
+    color: gray;
+    cursor: pointer;
+  }
+  .active {
+    color: black;
+    /* margin: 25px 45px; */
+    cursor: pointer;
+  }
+  .imagecontainer {
+    position: relative;
+    /* left: 0;
+    top: 0; */
+    width: 50%;
+    min-height: 40vh;
+    background-color: #ebecf0;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+  .imagecontainer img {
+    position: absolute;
+    width: 80%;
+    max-width: 80%;
+    max-height: 80%;
+    height: auto;
+    bottom: 20px;
+  }
+  .othercontent {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    /* background-color: beige; */
+    /* min-height: 90vh; */
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  .content {
+    width: 100%;
+    /* height: 100%; */
+    right: 0;
+    padding-top: 10%;
+    background-color: white;
+    position: relative;
+    column-gap: 20px;
+    /* margin: 0px 0; */
+  }
+  .work_content {
+    width: 90%;
+    height: 15%;
+    /* margin: 10px auto; */
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* margin-top: 20px;
+  margin-bottom: -30px; */
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .radio {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    column-gap: 10px;
+    padding-left: 50px;
+
+    /* margin-left: 30px; */
+  }
+  .radio_1 {
+    display: flex;
+    flex-direction: row;
+    column-gap: 5px;
+  }
+  /* .radio div {
+  margin-right: 10px;
+}
+.radio_1 {
+  margin: 0 10px;
+} */
+  .userinput {
+    width: 50%;
+    height: 58%;
+    padding: 15px 0;
+    border: 1px solid #212020;
+    outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    border-bottom-right-radius: 3px;
+    border-top-right-radius: 3px;
+  }
+
+  .usertext {
+    position: absolute;
+    width: 75%;
+    /* margin-left: 120px; */
+    outline: none;
+    border: 1px solid #ebecf0;
+    border-radius: 2px;
+    padding: 0 5px;
+    display: flex;
+  }
+  .button_content {
+    width: 22%;
+    height: 62%;
+    padding: 16px 0;
+    position: relative;
+    display: flex;
+    /* justify-content: end; */
+    align-items: center;
+    margin: 15px 0;
+    background-color: #212020;
+    padding-left: 15px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+  }
+
+  .button_content img {
+    width: 15%;
+    height: 100%;
+    margin: 0 6px;
+  }
+  .button_content div {
+    color: white;
+  }
+  .submit {
+    width: 20%;
+    height: 10%;
+    padding: 10px 10px;
+    border-radius: 5px;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+  }
+  .userin {
+    width: 90%;
+    justify-content: center;
+    align-items: center;
+    /* background-color: aqua; */
+    position: relative;
+    display: flex;
+  }
+  .down {
+    z-index: 10;
+    padding-right: 10px;
+  }
+}
 @media screen and (max-width: 1500px) {
   .container__button {
     width: 60%;
     left: 10px;
   }
 }
-@media screen and (max-width: 1020px) {
-  .radio {
-    margin-left: 10%;
+@media screen and (min-device-width: 900px) and (max-device-width: 1200px) {
+  .button_content img {
+    display: none;
   }
-  .radio div {
-    margin-right: -3%;
+  .down {
+    z-index: 10;
+    padding-right: 30px;
+  }
+  .userin {
+    width: 90%;
+    justify-content: center;
+    align-items: center;
+    /* background-color: aqua; */
+    position: relative;
+    display: flex;
+  }
+}
+@media screen and (max-width: 560px) {
+  .button_content img {
+    display: none;
+  }
+  .down {
+    z-index: 10;
+  }
+}
+@media screen and (max-width: 460px) {
+  .button_content {
+    width: 22%;
+    height: 62%;
+    padding: 16.5px 0;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 15px 0;
+    background-color: #212020;
+    /* padding-left: 15px; */
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+  }
+  .nav_content {
+    display: flex;
+
+    /* width: 50%;
+  max-width: 50%; */
+    /* margin: 0 20px; */
+    cursor: pointer;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 30px;
+  }
+  .radio {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    column-gap: 10px;
+    padding-right: 40px;
+    /* padding-left: 50px; */
+
+    /* margin-left: 30px; */
   }
   .radio_1 {
-    margin: 10% 4%;
+    display: flex;
+    flex-direction: row;
+    column-gap: 5px;
   }
-  .r {
-    font-size: 80%;
-    padding-right: 3%;
+  .submit {
+    width: 25%;
   }
-  .o {
-    font-size: 80%;
-  }
-}
-@media screen and (max-width: 640px) {
-  .r {
-    font-size: 60%;
-    padding: 3%;
-  }
-  .o {
-    font-size: 60%;
+  .down {
+    padding-right: 20px;
   }
 }
-@media screen and (min-device-width: 900px) and (max-device-width: 1300px) {
-  .button_content img {
-    display: none;
-  }
-}
-@media screen and (max-width: 550px) {
-  .button_content img {
-    display: none;
-  }
-  .rightcontent {
-    display: none;
-  }
-}
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 380px) {
   .button_content div {
     font-size: 80%;
   }
-}
-
-@media screen and (max-width: 460px) {
-  .usertext {
-    margin-right: 60px;
+  .button_content {
+    padding: 18px 0;
   }
-}
-@media screen and (max-width: 280px) {
-  .box {
-    width: 80%;
-    min-height: 100vh;
-    background-color: white;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-  }
-  .navbar {
-    position: absolute;
-    width: 150%;
-    height: 72px;
-    display: flex;
-    flex-direction: column;
-    background-color: #ebecf0;
-  }
-  .othercontent {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 80vh;
-    margin: 72px 0px;
-    /* margin-left: auto;
-        margin-right: auto; */
-    background-color: #ebecf0;
-  }
-  .imagecontainer {
-    position: relative;
-    /* left: 0;
-        top: 0; */
-    width: 100%;
-    min-height: 40vh;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #ebecf0;
+  .down {
+    display: none;
   }
 }
