--- a/styles/Dashboardwork.module.css
+++ b/styles/Dashboardwork.module.css
@@ -98,7 +98,7 @@
   }
   .workbox_3 {
     align-items: center;
-    width: 15%;
+    width: 20%;
     height: 40px;
     display: flex;
     flex-direction: row;
@@ -133,8 +133,6 @@
     flex-direction: row;
     justify-content: space-between;
     padding-left: 10px;
-
-    /* min-height: 50vh; */
   }
 
   .subrowbox_1 {
@@ -155,7 +153,7 @@
     /* border: 2px solid #ccc; */
     border-radius: 2px;
     padding: 0 5px;
-    background-color: #131313;
+    background-color: #f8f8f8;
   }
 }
 @media screen and (max-width: 820px) {
